# steam-clone

./: README.md  Steam-Project-Presentation.pptx  pyproject.toml
Database Diagrams/: Class Diagram.mdj  Steam Database SQL.txt
Pages/About/: about-js.js  about-stylesheet.css  about.html  fade-in.js
Pages/Checkout/: checkout-js.js  checkout-stylesheet.css  checkout.html  checkout2.html  purchase.html
Pages/Forgot Password/: forgot-password.html
Pages/Home/: home.html  main-js.js  main-stylesheet.css
Pages/Login/: login-stylesheet.css  login.html
Pages/Password Reset/: password-reset-js.js
Pages/Products/: product-js.js  product-stylesheet.css  product.html  product2.html
Pages/Register/: register.html
src/docs/: README.md
src/project/: index.html
src/project/Pages/About/: about-stylesheet.css  about.html  fade-in.js
src/project/Pages/Account Settings/: accountInfo-js.js  accountInfo-stylesheet.css  accountInfo.html
src/project/Pages/Checkout/: checkout-js.js  checkout.html  checkout2.html  purchase.html
steam-django/steam_clone_django/: db.sqlite3  manage.py
steam-django/steam_clone_django/checkout/: models.py  urls.py  views.py
steam-django/steam_clone_django/games/: admin.py  models.py  urls.py  views.py
steam-django/steam_clone_django/pages/: urls.py  views.py
steam-django/steam_clone_django/steam_clone_django/: settings.py  urls.py
steam-django/steam_clone_django/templates/: headerFooter.html  pagesBase.html  productBase.html
steam-django/steam_clone_django/users/: forms.py  models.py  tokens.py  urls.py  views.py
(+99 files in other folders)
